--- a/html/themes/custom/dc_theme/scss/components/_fields.scss
+++ b/html/themes/custom/dc_theme/scss/components/_fields.scss
@@ -66,3 +66,15 @@ ul, ol {
 .field-required {
   color: $colorAlert-error;
 }
+
+// search field in header
+
+.region-search {
+  #bcbb-search-api-form {
+    * {
+      font-size: 1em;
+      // set this to the same color as .region-nav-main $localColor in _navigation.scss
+      border-color: var(--bs-gray-900);
+    }
+  }
+}
